--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -6,12 +6,12 @@
     "orientation": "portrait",
     "icons": [
         {
-            "src": "assets/logo.png",
+            "src": "assets/book.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "assets/logo.png",
+            "src": "assets/book.png",
             "sizes": "512x512",
             "type": "image/png"
         }
